Config jpackage publishing for CLI